--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "pshing",
+  "version": "1.0.0",
+  "description": "A Node.js project",
+  "main": "./server.js",
+  "private": true,
+  "scripts": {
+    "dev": " nodemon ./server.js"
+  },
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
